--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="section container d-flex flex-column align-items-center justify-content-center" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" id="about">
     	<div class="row d-flex align-items-center" id="namecard">
         	<div class="col-md-3 d-flex justify-content-center">
-        	<img class="img" src="image/profile.png" alt="profilepic" width="auto" height="auto"/>
+        	<img class="img" src="image/profile.PNG" alt="profilepic" width="auto" height="auto"/>
             </div>
             <div class="col-md-9">
             	<div class="d-flex flex-column">
