--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div class="container padding" id="about">
   <div class="row">
     <div class="text-center col-md-6 col-xs-12">
-      <img class="img" src="image/profile.jpg" width="420px" height="auto"class="img-fluid">
+      <img src="image/profile.jpg" width="420px" height="auto"class="img-fluid img">
     </div>
     <div class="col-md-6 col-xs-12">
           <h1 class="display-4 ">About.</h1>
