--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="renderer" content="webkit" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta http-equiv="refreshz" content="5;url=http://www.baidu.com/" />
-		<link rel="stylesheet" href="./static/css/style.css" type="text/css">
+		<link rel="stylesheet" href="style.css" type="text/css">
 		<script src="https://unpkg.com/vue/dist/vue.js" type="text/javascript" charset="utf-8"></script>
 		<script src="https://unpkg.com/axios/dist/axios.min.js" type="text/javascript" charset="utf-8"></script>
 		<title>跳转</title>
@@ -14,24 +14,24 @@
 	<body>
 		<div class="bg">
 			<div class="logo">
-				<img src="./static/images/logo.png" alt="">
+				<img src="logo.png" alt="">
 			</div>
 			<div class="content">
-				<img src="./static/images/ad.png" alt="">
+				<img src="ad.png" alt="">
 			</div>
 			<div class="button">
-					<a href="http://www.baidu.com/"><img src="static/images/button.png" alt=""></a>
+					<a href="http://www.baidu.com/"><img src="button.png" alt=""></a>
 			</div>
 		</div>
 		<div class="bg1">
 				<div class="logo1">
-					<img src="./static/images/logo.png" alt="">
+					<img src="logo.png" alt="">
 				</div>
 				<div class="content1">
-					<img src="./static/images/ad.png" alt="">
+					<img src="ad.png" alt="">
 				</div>
 				<div class="button1">
-					<a href="http://www.baidu.com/"><img src="static/images/button.png" alt=""></a>
+					<a href="http://www.baidu.com/"><img src="button.png" alt=""></a>
 				</div>
 			</div>
 		<script>
