--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   
   <div class="row"> 
     <div class="col-md-4 col-xs-12"> 
-        <div class="m-5 card text-white bg-dark boxshadow" style="max-width: 18rem;min-height: 18rem;max-height: 18rem;">
+        <div class="m-5 card text-white bg-dark boxshadow" style="min-width: 15rem;min-height: 18rem;max-height: 18rem;">
           <div class="card-header">--</div>
             <div class="card-body">
               <h5 class="card-title text-center">Fruit Seller</h5>
@@ -157,7 +157,7 @@
     </div>
 
         <div class="col-md-4 col-xs-12"> 
-          <div class="m-5 card text-white bg-dark boxshadow" style="max-width: 18rem;min-height: 18rem;max-height: 18rem;">
+          <div class="m-5 card text-white bg-dark boxshadow" style="min-width: 15rem;min-height: 18rem;max-height: 18rem;">
             <div class="card-header">--</div>
             <div class="card-body">
               <h5 class="card-title text-center">Backpacker</h5>
@@ -171,7 +171,7 @@
         </div>
       </div>
         <div class="col-md-4 col-xs-12">
-        <div class="m-5 card text-white bg-dark boxshadow" style="max-width: 18rem;min-height: 18rem;max-height: 18rem;">
+        <div class="m-5 card text-white bg-dark boxshadow" style="min-width: 15rem;min-height: 18rem;max-height: 18rem;">
         <div class="card-header">--</div>
           <div class="card-body">
             <h5 class="card-title text-center">Instrument Engineer</h5>
